--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ name = django-datepick
 version = 0.1
 description = A Django app to add date pickers
 long_description = file: README.rst
+long_description_content_type = text/x-rst
 url = https://www.example.com
 author = Xabier Bello
 author_email = xbello@duck.com
@@ -10,9 +11,9 @@ license = MIT
 classifiers =
     Environment :: Web Environment
     Framework :: Django
-    Framework :: Django :: 4.2  # Replace "X.Y" as appropriate
+    Framework :: Django :: 4.2
     Intended Audience :: Developers
-    License :: OSI Approved :: BSD License
+    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
@@ -29,4 +30,4 @@ include_package_data = true
 packages = find:
 python_requires = >=3.8
 install_requires =
-    Django >= 4.2  # Replace "X.Y" as appropriate
+    Django >= 4.2
