--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = django-datepick
-version = 0.1
+version = 0.1.2
 description = A Django app to add date pickers
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-url = https://www.example.com
+url = https://github.com/xbello/django-datepick
 author = Xabier Bello
 author_email = xbello@duck.com
 license = MIT
